{{$NEXT}}

1.63    2013-10-28

- This release is based on version 2013h of the Olson database. This release
  includes contemporary changes for Morocco, Librya, and Western Sahara (El
  Aaiun).


1.62    2013-09-25

- This release is based on version 2013f of the Olson database. This release
  includes contemporary changes for Tocantins, Jordan, and Palestine.


1.61    2013-09-20

- This release is based on version 2013e of the Olson database. This release
  includes contemporary changes for Fiji, Indonesia and San Luis,
  Argentina. It also includes a number of historical changes. See
  http://mm.icann.org/pipermail/tz-announce/2013-September/000013.html for
  more details.


1.60    2013-07-07

- This release is based on version 2013d of the Olson database. This release
  includes contemporary changes for Morocco and Israel. It also includes
  historical changes for Jerusalem.


1.59    2013-04-20

- This release is based on version 2013c of the Olson database. This release
  includes contemporary changes for Palestine and Paraguay. It also includes a
  number of historical changes.


1.58    2013-03-11

- This release is based on version 2013b of the Olson database. This release
  includes contemporary changes for Haiti, Paraguay, and Morocca. See
  http://mm.icann.org/pipermail/tz-announce/2013-March/000010.html for more
  details.


1.57    2013-03-02

- This release is based on version 2013a of the Olson database. This release
  includes contemporary changes for Chile as well as several new zones -
  Asia/Khandyga, Asia/Ust-Nera, and Europe/Busingen. It also includes a number
  of historical changes.


1.56    2012-11-30

- The previous release was missing some files. That's what I get for running
  "git clean -dxf". Reported by Andreas Koenig. RT #81593.


1.55    2012-11-30

- Updated mapping from Win32 to Olson time zone names. Patch by Andrey
  Makhnutin. RT #81456.


1.54    2012-11-13
